[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/inkgd/editor/ink_panel.gd" type="Script" id=1]

[sub_resource type="Image" id=1]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 1 )
size = Vector2( 16, 16 )

[node name="Ink" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 245 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuration" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Configuration"]
margin_right = 1912.0
margin_bottom = 192.0
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InklecateVBoxContainer" type="VBoxContainer" parent="TabContainer/Configuration/VBoxContainer"]
margin_right = 1912.0
margin_bottom = 86.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer"]
margin_right = 1912.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 1782.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Inklecate"

[node name="TestButton" type="Button" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/HBoxContainer"]
margin_left = 1786.0
margin_right = 1912.0
margin_bottom = 20.0
mouse_filter = 1
text = "Test configuration"
__meta__ = {
"_editor_description_": "Attempt to execute inklecate using the configuration below."
}

[node name="InklecateMarginContainer" type="MarginContainer" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer"]
margin_top = 24.0
margin_right = 1912.0
margin_bottom = 86.0

[node name="Panel" type="Panel" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer"]
margin_right = 1912.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer"]
margin_right = 1912.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1907.0
margin_bottom = 57.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer"]
margin_right = 1902.0
margin_bottom = 52.0
size_flags_horizontal = 3
columns = 2

[node name="UseMonoLabel" type="Label" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 949.0
margin_bottom = 24.0
hint_tooltip = "When toggled, run inklecate through Mono.

Only enable this setting is you want to use an older version of inklecate or you have a custom setup.
Modern versions of inklecate come bundled with a mono runtime on all platforms."
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Use Mono"

[node name="UseMonoCheckBox" type="CheckBox" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 953.0
margin_right = 1902.0
margin_bottom = 24.0
text = "Yes"

[node name="MonoLabel" type="Label" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
visible = false
margin_top = 28.0
margin_right = 953.0
margin_bottom = 52.0
hint_tooltip = "The path to Mono."
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Mono"

[node name="MonoHBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
visible = false
margin_left = 957.0
margin_top = 28.0
margin_right = 1910.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="MonoLineEdit" type="LineEdit" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer/MonoHBoxContainer"]
margin_right = 921.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "/Library/Frameworks/Mono.framework/Versions/Current/Commands/mono"

[node name="MonoDialogButton" type="Button" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer/MonoHBoxContainer"]
margin_left = 925.0
margin_right = 953.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="ExecutableLabel" type="Label" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 949.0
margin_bottom = 52.0
hint_tooltip = "The path to inklecate."
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Executable"

[node name="ExecutableHBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 953.0
margin_top = 28.0
margin_right = 1902.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="ExecutableLineEdit" type="LineEdit" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer/ExecutableHBoxContainer"]
margin_right = 917.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "/opt/homebrew/bin/inklecate"

[node name="ExecutableDialogButton" type="Button" parent="TabContainer/Configuration/VBoxContainer/InklecateVBoxContainer/InklecateMarginContainer/MarginContainer/VBoxContainer/GridContainer/ExecutableHBoxContainer"]
margin_left = 921.0
margin_right = 949.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="StoryVBoxContainer" type="VBoxContainer" parent="TabContainer/Configuration/VBoxContainer"]
margin_top = 106.0
margin_right = 1912.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer"]
margin_right = 1912.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 1807.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Story"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/HBoxContainer"]
margin_left = 1811.0
margin_right = 1912.0
margin_bottom = 20.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildButton" type="Button" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 101.0
margin_bottom = 20.0
mouse_filter = 1
custom_constants/hseparation = 10
text = "Compile story"
__meta__ = {
"_editor_description_": "Compile the story manually, based on the configuration below."
}

[node name="StoryMarginContainer" type="MarginContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer"]
margin_top = 24.0
margin_right = 1912.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer"]
margin_right = 1912.0
margin_bottom = 62.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer"]
margin_right = 1912.0
margin_bottom = 62.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1907.0
margin_bottom = 57.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer"]
margin_right = 1902.0
margin_bottom = 52.0
size_flags_horizontal = 3
columns = 2

[node name="SourceFileLabel" type="Label" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 949.0
margin_bottom = 24.0
hint_tooltip = "The input path, a.k.a the original ink story."
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Source File"

[node name="SourceFileHBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 953.0
margin_right = 1902.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SourceFileLineEdit" type="LineEdit" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer/SourceFileHBoxContainer"]
margin_right = 917.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://examples/ink/the_intercept.ink"

[node name="SourceFileDialogButton" type="Button" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer/SourceFileHBoxContainer"]
margin_left = 921.0
margin_right = 949.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="TargetFileLabel" type="Label" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 949.0
margin_bottom = 52.0
hint_tooltip = "The output path, a.k.a the JSON file compiled from the original ink story."
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Target File"

[node name="TargetFileHBoxContainer3" type="HBoxContainer" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 953.0
margin_top = 28.0
margin_right = 1902.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="TargetFileLineEdit" type="LineEdit" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer/TargetFileHBoxContainer3"]
margin_right = 917.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://examples/ink/the_intercept.ink.json"

[node name="TargetFileDialogButton" type="Button" parent="TabContainer/Configuration/VBoxContainer/StoryVBoxContainer/StoryMarginContainer/MarginContainer/VBoxContainer/GridContainer/TargetFileHBoxContainer3"]
margin_left = 921.0
margin_right = 949.0
margin_bottom = 24.0
icon = SubResource( 2 )
